Added more changes
THE BALL KEEPS FALLING THROUGH THE GROUND
have to fix the physics of the ball falling through the ground
Added babylon debugger menu  on line 115 "scene.debugLayer()"
comment it out when done

--- a/index.html
+++ b/index.html
@@ -29,6 +29,8 @@
   <script src="https://cdn.babylonjs.com/loaders/babylonjs.loaders.min.js"></script>
   <!-- Include Ammo.js for Physics -->
   <script src="https://cdn.babylonjs.com/ammo.js"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/ammo.js/0.0.10/ammo.js"></script>
+
   <!-- Include Your Script -->
   <script src="app.js"></script>
 </body>
